--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -15,6 +15,7 @@
   location: New York City, USA
 
 - name: Arpit Bhalla
+  img: mlh.jpg
   username: arpitBhalla
   location: New York City, USA
   url: https://github.com/arpitbhalla
@@ -22,11 +23,12 @@
     twitter: arpit
     github: arpit
     linkedin: arpit
-  img: https://github.com/arpitbhalla.png
+  
 
 - name: Akhilesh
   username: AkhileshManda
+  img: swift.jpg
   location: New York City, USA
   url: https://github.com/AkhileshManda
   social:
-  img: https://github.com/AkhileshManda.png
+  
