--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "JAVASCRIPT JAGUARS"
+title: "Javascript Jaguars"
 email: fellowship@mlh.io
 description: >- # this means to ignore newlines until "baseurl:"
   This is my portfolio website!
