--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,12 @@ github_username:  mlh-fellowship
 
 sass:
   sass_dir: _sass
+gems:
+    - jekyll-maps
+
+# for map
+maps:
+    google:
+      api_key: AIzaSyCgJBn9afSN2q20A9BjYRrCviZmKKKNRTQ
 
 icon: /assets/img/icon.jpg
