--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -35,3 +35,12 @@
       github: https://github.com/AkhileshManda
       linkedin: https://www.linkedin.com/in/akhilesh-manda-7a9b661b8/
   
+- name: Kaushal
+  username: kaushal
+  img: KaushalJoshi.png
+  location: Mumbai, India
+  url: https://kaushaljoshi.vercel.app/
+  social:
+      twitter: https://twitter.com/clumsy_coder
+      github: https://github.com/joshi-kaushal
+      linkedin: https://www.linkedin.com/in/akhilesh-manda-7a9b661b8/
