added a plugin for jeykll maps, a yml file for location data and embedded map with pointers to the location

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,13 @@ github_username:  mlh-fellowship
 
 sass:
   sass_dir: _sass
+
 gems:
     - jekyll-maps
+
+plugins:
+  - jekyll-maps
+
 
 # for map
 maps:
