Updated my data in fellows.yml
Updated my data and social media handles.

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -44,3 +44,13 @@
       twitter: https://twitter.com/clumsy_coder
       github: https://github.com/joshi-kaushal
       linkedin: https://www.linkedin.com/in/akhilesh-manda-7a9b661b8/
+      
+- name: Arunima Chaudhuri
+  username: Arunima
+  img: Arunima.jpg
+  location: Kolkata, India
+  url: https://github.com/tinniaru3005
+  social:
+      twitter: 
+      github: https://github.com/tinniaru3005
+      linkedin: https://www.linkedin.com/in/arunima-chaudhuri-95217b194/
