--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -1,34 +1,43 @@
 - name: Will
   img: logo.jpg
-  location: London, UK
+  title: Will
+  url: http://google.fr
+  location: spain
+  coordinates: 
+    lat: 48.8587741
+    lng: 2.2074741
+    
+    
+  
 
-- name: Amanda
-  img: amanda.jpg
-  location: New York City, USA
 
-- name: Aaron
-  img: aaron.jpg
-  location: London, UK
-
-- name: Swift
-  img: swift.jpg
-  location: New York City, USA
 
 - name: Arpit Bhalla
   img: mlh.jpg
   username: arpitBhalla
-  location: New York City, USA
   url: https://github.com/arpitbhalla
   social:
     twitter: arpit
     github: arpit
     linkedin: arpit
+    title: Aaron
+  url: http://google.fr
+  location: Madrid
+  coordinates: 
+    lat: 40.4378698
+    lng: -3.8196204
+    
+    
   
 
 - name: Akhilesh
   username: AkhileshManda
   img: swift.jpg
-  location: New York City, USA
   url: https://github.com/AkhileshManda
   social:
+  title: Aaron
+  url: http://google.fr
+  coordinates:
+    lat: 40.4378698
+    lng: -3.8196204
   
