--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -36,11 +36,16 @@
       linkedin: https://www.linkedin.com/in/akhilesh-manda-7a9b661b8/
   
 - name: Kaushal
-  username: kaushal
-  img: KaushalJoshi.png
-  location: Mumbai, India
-  url: https://kaushaljoshi.vercel.app/
-  social:
-      twitter: https://twitter.com/clumsy_coder
-      github: https://github.com/joshi-kaushal
-      linkedin: https://www.linkedin.com/in/akhilesh-manda-7a9b661b8/
+  image: kaushal.png
+  birth_date: May 31st, 2002
+  city: Mumbai
+  school: Mumbai University
+  tech_skills: Next.js, Tailwind, MongoDB
+  hobbies: Films, books, computer hardware,
+  github: https://github.com/joshi-kaushal
+  linkedin: https://www.linkedin.com/in/7JKaushal
+  twitter: https://twitter.com/clumsy_coder
+  bio: I am Kaushal, hi!
+  coordinates:
+    lat: 19.07283
+    lng: 72.88261
