Updated data as per the format given
Updating all my details and also adding the missing details.

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -46,11 +46,17 @@
       linkedin: https://www.linkedin.com/in/akhilesh-manda-7a9b661b8/
       
 - name: Arunima Chaudhuri
-  username: Arunima
-  img: Arunima.jpg
-  location: Kolkata, India
-  url: https://github.com/tinniaru3005
-  social:
-      twitter: 
-      github: https://github.com/tinniaru3005
-      linkedin: https://www.linkedin.com/in/arunima-chaudhuri-95217b194/
+  image: Arunima.jpg
+  birth_date: May 30th, 2001
+  city: Kolkata
+  school: Government College of Engineering and Ceramic Technology
+  tech_skills: Java, C, Web development
+  hobbies: Dance, painting, travelling
+  github: https://github.com/tinniaru3005
+  linkedin: https://www.linkedin.com/in/arunima-chaudhuri-95217b194/
+  twitter: N/A
+  bio: I am a tech enthusiast. I love learning and exploring new things. I am currently a mentor at Open Source Hach and an MLH Fellow (Prep). I am a LiFT Scholarship Recipient. I love being a part of various communities and interacting with like-minded people. 
+  coordinates:
+     lat : 22
+     lng: 88
+
