--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -48,7 +48,7 @@
 - name: Reeju Bhattacharya
   image: reeju.jpg
   birth_date: May 27, 2002
-  city: Kolkata
+  city: Howrah
   school: IIEST Shibpur
   tech_skills: Java, Android(Kotlin)
   hobbies: Reading, Watching Movies, Procrastinating 
