added dummy data to felows.yml

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -29,7 +29,7 @@
 
 - name: Akhilesh
   username: AkhileshManda
-  img: swift.jpg
+  img: AkhileshManda.jpg
   url: https://github.com/AkhileshManda
   social:
   title: Aaron
@@ -41,7 +41,7 @@
   
 - name: Kaushal
   username: kaushal
-  img: KaushalJoshi.png
+  img: swift.jpg
   location: Mumbai, India
   url: https://kaushaljoshi.vercel.app/
   social:
