added personal info in fellows.yml

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -87,3 +87,19 @@
   coordinates:
      lat : 22
      lng: 88
+
+
+- name: Shofiya Bootwala
+  image: shofiya.jpg
+  birth_date: May 27th, 2003
+  city: Vadodara
+  school: Sardar Vallabbhai Patel Institute of Technology
+  tech_skills: Full Stack Developer
+  hobbies: Watching Movies
+  github: https://github.com/Shofiya2003
+  linkedin: https://www.linkedin.com/in/shofiya-bootwala-0a1130220/
+  twitter: 
+  bio: I am a inquisitive Backend Developer, with a knack to learn new technologies and solve real world problems
+  coordinates:
+     lat : 22.3072
+     lng: 73.1812
