Revert "resolved merge conflicts"
This reverts commit 23842ecd8600f6276bffbcb9abdf280ba7c5f910.

--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,16 @@ github_username:  mlh-fellowship
 sass:
   sass_dir: _sass
 
+gems:
+    - jekyll-maps
+
+plugins:
+  - jekyll-maps
+
+
+# for map
+maps:
+    google:
+      api_key: AIzaSyCgJBn9afSN2q20A9BjYRrCviZmKKKNRTQ
 
 icon: /assets/img/icon.jpg
