Revert "added dummy data to felows.yml"
This reverts commit 134761bc46ef71f17482828f896b42b27edd0123.

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -30,7 +30,7 @@
 
 - name: Akhilesh
   username: AkhileshManda
-  img: AkhileshManda.jpg
+  img: swift.jpg
   url: https://github.com/AkhileshManda
   social:
   title: Aaron
