--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -37,6 +37,7 @@
   
 - name: Kaushal
   image: kaushal.png
+  user: clumsycoder
   birth_date: May 31st, 2002
   city: Mumbai
   school: Mumbai University
@@ -45,7 +46,7 @@
   github: https://github.com/joshi-kaushal
   linkedin: https://www.linkedin.com/in/7JKaushal
   twitter: https://twitter.com/clumsy_coder
-  bio: I am Kaushal, hi!
+  bio: Kaushal is a computer science undergrad from Mumbai, India. He loves talking about computers, films and JavaScript. His life revolves around Stanley Kubrick and his filmography, advocating for Kurzgesagt amongst his friends and exploring new things.
   coordinates:
     lat: 19.07283
     lng: 72.88261
