docs: updated my info (again)

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -42,7 +42,7 @@
   city: Mumbai
   school: Mumbai University
   tech_skills: Next.js, Tailwind, MongoDB
-  hobbies: Films, books, computer hardware,
+  hobbies: Films, journaling and notetaking
   github: https://github.com/joshi-kaushal
   linkedin: https://www.linkedin.com/in/7JKaushal
   twitter: https://twitter.com/clumsy_coder
