adding pravallika's info

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -39,7 +39,6 @@
     lat: 40.4378698
     lng: -3.8196204
   
-<<<<<<< HEAD
 - name: Kaushal
   username: kaushal
   img: KaushalJoshi.png
@@ -83,5 +82,17 @@
      lat : 22
      lng: 88
 
-=======
->>>>>>> parent of 23842ec (resolved merge conflicts)
+- name: Sai Pravallika Myneni
+  image: pravallika.jpg
+  birth_date: March 17th, 2000
+  city: Vijayawada, India
+  school: Northwestern University
+  tech_skills: Python, Machine Learning, Data Science
+  hobbies: hackathon, making protein bars, watching movies and series, learning new languages
+  github: https://github.com/Pravallika-Myneni/
+  linkedin: https://www.linkedin.com/in/pravallika-myneni/
+  twitter: 
+  bio: Hola!! Pravallika here, an incoming AI grad at Northwestern University. My forte is Data Science/Artificial Intelligence. I mostly code in python and love exploring new data skills. I enjoy meeting people from around the world.  
+  coordinates:
+     lat : 16.5062
+     lng: 80.6480
