--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -87,3 +87,19 @@
   coordinates:
      lat : 22
      lng: 88
+
+- name: Krisha Adeshara
+  image: krisha.jpg
+  birth_date: September 2nd, 2002
+  city: Vadodara, India
+  school: DDU
+  tech_skills: JavaScript, C++
+  hobbies: Reading, Puzzles, Thrillers
+  github: https://github.com/Krishi-02
+  linkedin: https://www.linkedin.com/in/krishaadeshara/
+  twitter: https://twitter.com/AdesharaKrisha
+  bio: Hey there! It's Krisha, a final year student pursuing IT Engineering. Krisha is a striving full-stack developer and keenly interested in learning about new things to expand her knowledge base. 
+  coordinates:
+    lat: 22.3072
+    lng: 73.1812
+
