--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -91,8 +91,8 @@
   linkedin: https://www.linkedin.com/in/arpitbhalla
   bio: An aspiring Engineer interested in contributing to the world through Open Source Softwares. Currently co-maintaining most popular React Native library for UI, React Native Elements.
   coordinates:
-     lat : 22
-     lng: 88
+     lat: 29.9430339
+     lng: 76.8151131
      
 - name: Hetvi Soni
   image: Hetvi.jpg
