Fix arpit's data in fellows.yml

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -79,7 +79,7 @@
     lng: 88
 
 - name: Arpit Bhalla
-  img: arpit.jpeg
+  image: arpit.jpeg
   username: arpitBhalla
   location: Kuruksehtra, India
   url: https://arpitbhalla.github.io/
