Revert "Revert "added dummy data to felows.yml""
This reverts commit 4bd8ecc444c26d2e813628befa0c2ce157831b3f.

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -49,7 +49,7 @@
 
 - name: Akhilesh
   username: AkhileshManda
-  img: swift.jpg
+  img: AkhileshManda.jpg
   url: https://github.com/AkhileshManda
   social:
   title: Aaron
