--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -146,3 +146,17 @@
     lat: 28.677
     lng: 77.502      
 
+- name: Sai Pravallika Myneni
+  image: pravallika.jpg
+  birth_date: March 17th, 2000
+  city: Vijayawada, India
+  school: Northwestern University
+  tech_skills: Python, Machine Learning, Data Science
+  hobbies: hackathon, making protein bars, watching movies and series, learning new languages
+  github: https://github.com/Pravallika-Myneni/
+  linkedin: https://www.linkedin.com/in/pravallika-myneni/
+  twitter: 
+  bio: Hola!! Pravallika here, an incoming AI grad at Northwestern University. My forte is Data Science/Artificial Intelligence. I mostly code in python and love exploring new data skills. I enjoy meeting people from around the world.  
+  coordinates:
+     lat : 16.5062
+     lng: 80.6480
