Abdulwasiu's Lat. and Long. details

--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -207,6 +207,9 @@
   github: https://github.com/mrbazzan
   linkedin: https://www.linkedin.com/in/abdulwasiu-apalowo
   twitter: N/A
+  coordinates:
+    lat: 7
+    lng: 5
   page_name: Abdulwaisu
 
 - name: Ruchita Gosavi
