--- a/_data/fellows.yml
+++ b/_data/fellows.yml
@@ -199,6 +199,10 @@
   github: https://github.com/tiffany-pann
   linkedin: https://www.linkedin.com/in/tiffany-pan-/
   twitter: N/A
+  coordinates:
+    lat: 40
+    lng: -74
+
   page_name: Tiffany
 
 - name: Abdulwasiu Apalowo
